# tcpClient

./: CMakeLists.txt  Main.qml  README.md  app.cpp  app.h  client_handler.cpp  client_handler.h  main.cpp
model/: channel.h  volt_meteers_model.cpp  volt_meteers_model.h
protocol/: client_protocol.cpp  client_protocol.h  protocol.h
tcp/: boost_tcp_client.cpp  boost_tcp_client.h  tcp_client.h
ui/: ConnectionRow.qml  StatusesRow.qml  VoltMeter.qml  VoltMetersList.qml
